--- a/app/views/pages/contactus.html.erb
+++ b/app/views/pages/contactus.html.erb
@@ -1,3 +1,6 @@
-
-<h1>Sam Joseph</h1>
-<p>sjoseph1848@gmail.com</p>
+<div class="jumbotron">
+    <div class="container">
+        <h1>Contact Us</h1>
+        <p>sjoseph1848@gmail.com</p>
+    </div>
+</div>
