--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>One Month Rails Project</title>
+    <title>Sam Joseph's Website</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -13,7 +13,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
       <div class="container">
-        <%= link_to "One Month Rails", root_path, class: "navbar-brand" %>
+        <%= link_to "Sam Joseph", root_path, class: "navbar-brand" %>
         <ul class="navbar-nav">
           <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "About", about_path, class: "nav-link" %></li>
@@ -24,13 +24,13 @@
 
     <!-- Page Content -->
     <%= yield %>
-    
+
     <!-- Footer -->
     <footer class="small text-muted">
       <div class="container">
         <hr>
         <center>
-          <p>© 2016 One Month</p>
+          <p>© Sam Joseph Production</p>
         </center>
       </div>
     </footer>
