--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,26 +1,24 @@
 <div class="jumbotron jumbotron-home">
     <div class="container">
-        <h1>Welcome to my website!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <%= link_to "Learn more »", "#", class: "btn btn-primary btn-lg" %> 
+
     </div>
 </div>
-<div class="container">
+<div class="container container-home">
     <div class="row">
         <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
+            <h2>Origin Story</h2>
+            <p>To learn more about why I started programming </p>
+            <p><%= link_to "View details", originstory_path, class: "btn btn-secondary" %></p>
         </div>
         <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
+            <h2>Projects</h2>
+            <p>To see some cool projects I have worked on please look here</p>
+            <p><%= link_to "View details", projects_path, class: "btn btn-secondary" %></p>
         </div>
         <div class="col-md-4">
-            <h2>Heading</h2>
+            <h2>Skills</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
+            <p><%= link_to "View details", skills_path, class: "btn btn-secondary" %></p>
         </div>
     </div>
 </div>
